--- a/index.html
+++ b/index.html
@@ -40,6 +40,27 @@
 					</div>
 				</section>
 				<section>
+					<h2>Les membres fondateurs</h2>
+					<div class="directionRow">
+						<article>
+							<img src="images/soraya.png" alt="photo_de_soraya"/>
+							<h3>Soraya</h3>
+							<p>Longboard</p>
+						</article>
+						<article>
+							<img src="images/marc.png" alt="photo_de_marc"/>
+							<h3>Marc</h3>
+							<p>Street</p>
+						</article>
+						<article>
+							<img src="images/pedro.png" alt="photo_de_pedro"/>
+							<h3>Pedro</h3>
+							<p>Pool</p>
+						</article>
+						
+					</div>
+				</section>
+				<section>
 					<div class="directionRow">
 						<a class="button buttonDrakGreyColor" href="documents/planning">Télécharger le planning de cours</a>
 					</div>
