--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 						
 					</div>
 				</section>
-				<section>
+				<section class="sectionLightGreyBackground">
+					<h2>Découvrez nos cours !</h2>
 					<div class="directionRow">
 						<a class="button buttonDrakGreyColor" href="documents/planning">Télécharger le planning de cours</a>
 					</div>
