--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
 				</section>
 				<section class="sectionLightGreyBackground">
 					<h2>Découvrez nos cours !</h2>
-					<div class="directionRow">
-						<a class="button buttonDrakGreyColor" href="documents/planning">Télécharger le planning de cours</a>
+					<div class="directionColumn">
+						<a class="button buttonMainColor buttonRounded buttonHighlight" href="documents/planning-adultes.pdf">Télécharger le planning de cours pour adultes</a>
+						<a class="button buttonSecondColor buttonRounded buttonHighlight" href="documents/planning-enfants.pdf">Télécharger le planning de cours pour enants</a>
 					</div>
 				</section>
 			</main>
